// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwrites the previous textTransform property 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "margin": 0,
      },
      Array [
        undefined,
        Object {
          "fontFamily": "CircularPro-Book",
        },
      ],
    ]
  }
>
  THIS SHOULD BE UPPERCASED
</Text>
`;

exports[`passes all props down to the children 1`] = `
Array [
  <Translation
    passThrough={1}
    textTransform="uppercase"
  />,
  <Translation
    passThrough={2}
    textTransform="uppercase"
  />,
]
`;

exports[`throws error for undefined children 1`] = `"'TranslationFragment' cannot be used without children."`;

exports[`transforms only translations friendly components 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto",
          "margin": 0,
        },
        Array [
          undefined,
          Object {
            "fontFamily": "CircularPro-Book",
          },
        ],
      ]
    }
  >
    THIS IS GOING TO BE UPPERCASED
  </Text>,
  <Text
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
    this is going to stay lowercased
  </Text>,
]
`;

exports[`works with conditionals 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "margin": 0,
      },
      Array [
        undefined,
        Object {
          "fontFamily": "CircularPro-Book",
        },
      ],
    ]
  }
>
  I should render
</Text>
`;

exports[`works with nested fragments 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto",
          "margin": 0,
        },
        Array [
          undefined,
          Object {
            "fontFamily": "CircularPro-Book",
          },
        ],
      ]
    }
  >
    level aaa.1
  </Text>,
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto",
          "margin": 0,
        },
        Array [
          undefined,
          Object {
            "fontFamily": "CircularPro-Book",
          },
        ],
      ]
    }
  >
    level bbb.1
  </Text>,
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto",
          "margin": 0,
        },
        Array [
          undefined,
          Object {
            "fontFamily": "CircularPro-Book",
          },
        ],
      ]
    }
  >
    level bbb.2
  </Text>,
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto",
          "margin": 0,
        },
        Array [
          undefined,
          Object {
            "fontFamily": "CircularPro-Book",
          },
        ],
      ]
    }
  >
    level aaa.2
  </Text>,
]
`;

exports[`works with string as child 1`] = `
Array [
  "this is a string",
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto",
          "margin": 0,
        },
        Array [
          undefined,
          Object {
            "fontFamily": "CircularPro-Book",
          },
        ],
      ]
    }
  >
    I should render
  </Text>,
]
`;

exports[`works without additional props 1`] = `
Array [
  <Translation
    passThrough={1}
  />,
]
`;
